mendeley fixed yeeeb oissssS
Signed-off-by: Paul Balaji <paulmonish@gmail.com>

--- a/dissertation/interimreport.tex
+++ b/dissertation/interimreport.tex
@@ -414,7 +414,7 @@ Example text 3
 \newpage
 \addcontentsline{toc}{section}{References}
 
-\bibliography{refs}
+\bibliography{library}
 \bibliographystyle{abbrv}
 
 \newpage
