--- a/dissertation/interimreport.tex
+++ b/dissertation/interimreport.tex
@@ -369,16 +369,52 @@ The gradient $\nabla U$ is then normalised to be a unit vector before being mult
 \subsubsection{Genetic Algorithm}
 By paying close attention to Section 2.4.2, we can identify several undefined constants: $\rho_r$, $\rho_a$, $\rho_{ret}$ and $d_{influence}$. The balance between them is key, because if $\rho_a$ is too high relative to $\rho_r$ then the drones ignore obstacles and die on impact, but if $\rho_r$ is too high then they will oscillate between objects and never reach their goal. After much fiddling about with "magic numbers", a genetic algorithm was employed to provide the optimal values for the specific drone model. \\
 
-Genetic algorithms are a metaheuristic inspired by the process of natural selection, and they are a way by which high-quality solutions can be generated for optimisation problems\cite{Mitchell1996}. In the case of AATC, the aforementioned constants need to be fine-tuned in order to produce an APF model that, to its best ability, does not return absurd, erroneous velocities.
+Genetic algorithms are a metaheuristic inspired by the process of natural selection, and they are a way by which high-quality solutions can be generated for optimisation problems\cite{Mitchell1996}. In the case of AATC, the aforementioned constants need to be fine-tuned in order to produce an APF model that, to its best ability, does not return absurd, erroneous velocities. See Figure \ref{fig:aatc_spaghett} as an example. \\
 
+\begin{figure}[!hbpt]
+  \center
+  \includegraphics[width=\linewidth]{img/aatc_spaghett.jpg}
+  \caption{Drone paths after increasing repulsion constant by 3 orders of magnitude.}
+  \label{fig:aatc_spaghett}
+\end{figure}
 
+Effectively, an initial range of values (see Table \ref{tab:gen_alg}) is provided and the genetic algorithm cycles through all of these, letting these constants compete against each other to see which set of constants produces the simulation with the lowest cost. This cost is determined from a cost function that returns the remaining battery life of a drone if it reaches its destination, or a relatively huge number otherwise.
+$$cost = \sum_{testcase} \sum_{drone}
+    \begin{cases}
+      batteryUsed & if \; drone \; reached \; destination    \\
+      100000 & otherwise \\
+
+   \end{cases}$$
+
+\begin{table}[!hbpt]
+\centering
+\begin{tabular}{|l|l|l|l|l|}
+\hline
+Constant           & Min & Max & Step & Total \\ \hline
+Attraction         & 0.8 & 1.1 & 0.1    & 3     \\ \hline
+Repulsion          & 100 & 500 & 100  & 5     \\ \hline
+Return             & 0.1 & 0.7 & 0.2  & 4     \\ \hline
+Influence distance & 300 & 600 & 100  & 4     \\ \hline
+\multicolumn{4}{|l|}{Population}      & 240   \\ \hline
+\end{tabular}
+\caption{Initial configuration of the genetic algorithm for AATC. \cite{Balaji2017}}
+\label{tab:gen_alg}
+\end{table}
+
+\subsubsection{Conclusions}
+In the end, the genetic algorithms only improved the simulations by about 2\%\cite{Balaji2017} which could mean that the original range of constants was already a good set to work with. However, there is still scope for even greater improvements if the genetic algorithm was to be run with a greater number of test scenarios, bigger range of values to cycle through, and generally larger simulations.
 
 \subsection{Delivery Networks}
+
 \subsubsection{Planes}
 \subsubsection{Trucks}
 \subsubsection{Drones}
 
 \subsection{Prioritising Economic Value}
+Thus far, we have shown that whilst there is great scope to utilise drones for delivery of physical goods, the technology worked on for AATC only touches upon the routing aspect - how to get from point A to point B. In all the test cases, the drones' start and end points were hand-picked by the developers\cite{Balaji2017} to give an insight into how AATC would operate in a variety of scenarios.
+
+In order to take AATC to the next level, work has to be done 
+
 \subsubsection{Quality of Service}
 \subsubsection{Value Curve}
 \subsubsection{skdbsa}
