updated to biblatex --> better looking references
Signed-off-by: Paul Balaji <paulmonish@gmail.com>

--- a/dissertation/interimreport.tex
+++ b/dissertation/interimreport.tex
@@ -19,6 +19,8 @@
 \usepackage{fancyhdr}
 \usepackage{listings}
 \usepackage{color}
+\usepackage[maxbibnames=99]{biblatex}
+\bibliography{library}
 
 \definecolor{codegreen}{rgb}{0,0.6,0}
 \definecolor{codegray}{rgb}{0.5,0.5,0.5}
@@ -404,13 +406,11 @@ Influence distance & 300 & 600 & 100  & 4     \\ \hline
 \subsubsection{Conclusions}
 In the end, the genetic algorithms only improved the simulations by about 2\%\cite{Balaji2017} which could mean that the original range of constants was already a good set to work with. However, there is still scope for even greater improvements if the genetic algorithm was to be run with a greater number of test scenarios, bigger range of values to cycle through, and generally larger simulations.
 
-\subsection{Delivery Networks}
+\subsection{Future of Delivery Networks}
 From the ancient days of Assyrian trade in 19 BCE \cite{stearns2001the}, to the modern day online market - the ability to trade goods and services has had a profound impact on the way we live our lives. Thanks to globalisation and the explosion of the internet, we are now able to use a service such as Amazon Prime and get goods delivered within days, if not hours, of purchasing through a simple click. Through it all, physical delivery networks enable this online retail behemoth.
 
-
-
-\subsubsection{Planes}
-\subsubsection{Trucks}
+\subsubsection{Delivery Robots}
+\subsubsection{Autonomous Cars}
 \subsubsection{Drones}
 
 \subsection{Prioritising Economic Value}
@@ -452,8 +452,7 @@ Example text 3
 \newpage
 \addcontentsline{toc}{section}{References}
 
-\bibliography{library}
-\bibliographystyle{abbrv}
+\printbibliography
 
 \newpage
 
