autonomous cars majority done
Signed-off-by: Paul Balaji <paulmonish@gmail.com>

--- a/dissertation/interimreport.tex
+++ b/dissertation/interimreport.tex
@@ -421,9 +421,13 @@ Delivery robots are unmanned devices that are designed to be operated on pavemen
   \label{fig:starship_citizen}
 \end{figure}
 
-Due to their on-the-ground nature, delivery robots are primarily designed for low-footfall suburban neighbourhoods, closed residential areas or campuses. They would be scheduled through an Uber-like application that may allow users to track the location of the robot, for the customer's knowledge, and to also unlock the robot once it reaches its destination\cite{Hohenadel2015}.
+Due to their on-the-ground nature, delivery robots are primarily designed for low-footfall suburban neighbourhoods, closed residential areas or campuses. They would be scheduled through an Uber-like application that may allow users to track the location of the robot, for the customer's knowledge, and to also unlock the robot once it reaches its destination\cite{Hohenadel2015}. \\
+
+Thanks to their similarities to autonomous cars, they may have regulatory advantages compared to drones because much of the legislation coming through for autonomous vehicles can apply to delivery robots as well.
 
 \subsubsection{Autonomous Cars}
+Once the de-facto icon of science fictional futurism, autonomous cars are now a close reality. Companies such as Tesla are doing pioneering work in bringing self-driving cars\cite{Tesla2018} to the general consumer. Meanwhile, other businesses like Uber are experimenting with autonmous taxi services\cite{Gibbs2017}. 
+
 \subsubsection{Drones}
 
 \subsection{Prioritising Economic Value}
