--- a/dissertation/interimreport.tex
+++ b/dissertation/interimreport.tex
@@ -197,23 +197,36 @@ Delivery robots are unmanned devices that are designed to be operated on pavemen
 
 Due to their on-the-ground nature, delivery robots are primarily designed for low-footfall suburban neighbourhoods, closed residential areas or campuses. They would be scheduled through an Uber-like application that may allow users to track the location of the robot, for the customer's knowledge, and to also unlock the robot once it reaches its destination\cite{Hohenadel2015}. \\
 
-Thanks to their similarities to autonomous cars, they may have regulatory advantages compared to drones because much of the legislation coming through for autonomous vehicles can apply to delivery robots as well.
+Thanks to their similarities to autonomous cars, they may have regulatory advantages compared to drones because much of the legislation coming through for autonomous vehicles can apply to delivery robots as well. However, there are profitability concerns because each robot can cost hundres of dollars and there is at this stage there is a high risk of failure, damage and even theft. \\
+
+Despite some drawbacks, it is evident these robots are designed for short journeys in the so-called "first-mile delivery" sector - with exciting use cases being the delivery of flowers, groceries and possibly medication.
 
 \subsubsection{Autonomous Vehicles}
 Once the de-facto icon of science fictional futurism, autonomous cars are now a close reality. Companies such as Tesla are doing pioneering work in bringing self-driving cars\cite{Tesla2018} to the general consumer. Meanwhile, other businesses like Uber are experimenting with autonmous taxi services\cite{Gibbs2017}. \\
 
-In fact, Google has obtained a patent for an autonomous delivery truck \cite{Hall-Geisler} with different compartments that could be unlocked by validated package recipients - much akin to an Amazon Locker-on-wheels.
+In fact, Google has obtained a patent for an autonomous delivery truck \cite{Hall-Geisler} with different compartments that could be unlocked by validated package recipients - much akin to an Amazon Locker-on-wheels. If not this, these vehicles could be used as an autonomous courier to pick-up locations that users could visit to retrieve their packages.
 
 \begin{figure}[!hbpt]
   \center
-  \includegraphics[width=0.8\linewidth]{img/google_truck_patent.jpeg}
+  \includegraphics[width=0.4\linewidth]{img/google_truck_patent.jpeg}
   \caption{Illustration of Google's Delivery Truck. \cite{google_truck_patent}}
   \label{fig:google_truck_patent}
 \end{figure}
 
-\subsubsection{Drones}
+Although current regulations dictate that a driver must remain present in the vehicle in the event of software performing differently to expections, this is a necessary precaution whilst driverless systems are still being tested - with further amendments to these laws in sight once these systems can be deemed safe for public use\cite{Bowcott2017}.
 
-\subsection{Drones}
+\subsubsection{Drones}
+The concept of drones has been around for decades, particularly in the military, but only in recent times has the technology evolved to a point where anyone can walk into a consumer electronics store and purchase a drone for their own private use. Although these are manned, it is admirable that many are seeing the benefits of drones in film/television\cite{Verrier2015}, agriculture\cite{Jarman2016}, policing\cite{BBCNews2017a} and other exotic activities\cite{Roberts2016}. \\
+
+Being able to fly is itself a differentiating factor from delivery robots or other autonomous vehicles, because drones are not held hostage to traffic jams or congestion - after all, the sky is a far greater expanse than even the most intricate of road networks. Not only that, they can literally travel ``as the crow flies''. \\
+
+As with most groundbreaking tech in its infancy, drones usually achieves front page headlines when things go wrong. There have been several near-misses \cite{Davies2017} and accidents\cite{BBCNews2016} at just Heathrow airpot alone, which indicates that better regulation is needed to improve the safety of drones as well as manned aviation that share the same airspace. \\
+
+Nevertheless, engineering teams across the world are working on ways to improve drone visibility to its surroundings - one such technology being automatic dependent surveillance-broadcast (ADS-B) \cite{Dillow2015}. Drones with ADS-B work by determining their own geolocation and velocity in order to broadcast this back to the global network.\\
+
+ADS-B is already widely used in aircraft, enabling flight-tracking services such as flightradar24 to exist\cite{Flightradar242018}, but recent developments have allowed the ADS-B units to be compact and cost-effective enough to be suitable for drones. 
+
+\subsection{Drone Considerations}
 As we have introduced, drones stand to be a revolutionary part of our lives as we welcome the new, incoming era of automation. However, to be practical there are a few key concepts one must understand to ensure that they remain a help and not a harm or hinderence to mankind.
 
 \subsubsection{No Fly Zones}
